clusters/hyades/apps/nginx-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: nginx
          resources:
            requests:
              cpu: 50m
            limits:
              memory: 64Mi
          ports:
            - containerPort: 80
