clusters/hyades/apps/nginx-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  labels:
    name: myapp
    namespace: default
spec:
  rules:
    - host: myapp.onair
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myapp
                port:
                  number: 80
